--- a/css/style.scss
+++ b/css/style.scss
@@ -20,9 +20,19 @@ $margin: 10px;
 * Override Bootstrap variables 
 */
 $font-family-sans-serif: $main-font;
- 
+
 @import 'bootstrap';
 
+/* Icons */
+.icon-circle{
+    font-size: 100px;
+    border: 5px solid white;
+    border-radius: 170px;
+    line-height: 170px;
+    width : 240px;
+    padding: 30px 30px 30px 30px;
+}
+ 
 * {
     position: relative;
     box-sizing: border-box;
@@ -38,32 +48,21 @@ header {
     max-height: 600px;
     height: 600px;
     overflow: hidden;
-    img {
-	    position: fixed;
-	    top: 0px;
-	    left: 50%;
-	    margin-left: -600px;
-	    width: 1200px;
-	    margin-top: -185px;
-	 
-	    @media screen and (min-width: $screen-lg) {
-	        top: auto;
-	        left: auto;
-	        margin: -175px 0 0 0;
-	        width: 100%;
-	    }
-	}
+    background: url("../images/desktop.jpg");
+    background-repeat: repeat;
+    background-position: center 0px;
+    background-attachment: fixed;
 
-	.cover{
-		display: block;
-		position: absolute;
-		top: 0;
-		left: 0;
-		right: 0;
-		bottom: 0;
-		background: rgba(0,0,0,0.30);
-	}
+}
 
+.cover{
+	display: block;
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background: rgba(0,0,0,0.30);
 }
 
 .name {
@@ -163,6 +162,7 @@ h2 {
 
 .instagram-wrap {
     background: $lightgrey;
+    padding : $padding*4 0 $padding*7 0;
 }
  
 .instagram-content {
@@ -172,10 +172,38 @@ h2 {
         font-size: 12px;
         font-weight: 700;
         text-align: center;
-        padding: $padding*5 0;
+        padding: $padding*2.5 0;
         color: darken($lightgrey, 20%);
     }
+    h1{
+        text-align: center;
+        color: darken($lightgrey, 20%);
+        .icon-circle{
+            border-color: darken($lightgrey, 20%);
+        }
+    }
  
+}
+
+
+.sub-titles {
+    position: absolute;
+    top: 10%;
+    width: 100%;
+    text-align: center;
+
+    @media screen and (min-width: $screen-lg) {
+        top: 10%;
+    }
+     h3 {
+        text-transform: uppercase;
+        letter-spacing: 0.5em;
+        font-size: 12px;
+        font-weight: 700;
+        text-align: center;
+        padding: $padding*2.5 0;
+        color: white;
+    }
 }
 
 .photo-box {
@@ -213,6 +241,16 @@ h2 {
         	}
         }	
     }
+}
+
+.first-image{
+    max-height: 400px;
+    height: 400px;
+    overflow: hidden;
+    background: url("../images/workspace.jpg");
+    background-repeat: repeat;
+    background-position: center 0px;
+    background-attachment: fixed;
 }
 
 footer {
