--- a/css/style.scss
+++ b/css/style.scss
@@ -188,12 +188,12 @@ h2 {
 
 .sub-titles {
     position: absolute;
-    top: 10%;
+    top: 30%;
     width: 100%;
     text-align: center;
 
     @media screen and (min-width: $screen-lg) {
-        top: 10%;
+        top: 30%;
     }
      h3 {
         text-transform: uppercase;
@@ -244,8 +244,8 @@ h2 {
 }
 
 .first-image{
-    max-height: 400px;
-    height: 400px;
+    max-height: 650px;
+    height: 650px;
     overflow: hidden;
     background: url("../images/workspace.jpg");
     background-repeat: repeat;
@@ -318,4 +318,21 @@ footer {
     @media screen and (min-width: $screen-md) {
         padding: $padding*4 0;
     }
+}
+
+.curveUpColor, .curveDownColor{
+    position: absolute;
+    left: 0;
+    z-index: 1;
+}
+.curveDownColor {
+    margin-bottom: -100px;
+}
+.curveUpColor {
+    margin-top: -100px;
+}
+
+.curveGrey{
+    fill: $lightgrey;      
+    stroke: $lightgrey;
 }
