--- a/css/style.css
+++ b/css/style.css
@@ -5472,7 +5472,8 @@ h2 {
 footer {
   background: #FFF;
   padding: 30px 0;
-  text-align: center; }
+  text-align: center;
+  margin: 100px 0 0 0; }
   @media screen and (min-width: 1200px) {
     footer {
       padding: 100px 0; } }
