--- a/css/style.css
+++ b/css/style.css
@@ -5293,6 +5293,9 @@ button.close {
 @media print {
   .hidden-print {
     display: none !important; } }
+.cursor-pointer {
+  cursor: pointer; }
+
 /* Icons */
 .icon-circle {
   font-size: 100px;
@@ -5541,6 +5544,52 @@ footer {
       background: #8a8f99;
       border-color: #8a8f99;
       color: #FFF; }
+  footer .fa-twitter {
+    font-size: 36px;
+    border: 2px solid #585c65;
+    border-radius: 30px;
+    padding: 6px 7px;
+    color: #FFF;
+    background-color: #585c65;
+    vertical-align: bottom;
+    margin: 20px; }
+  footer .fa-twitter:hover {
+    border: 2px solid #2daae4;
+    color: #FFF;
+    background-color: #2daae4; }
+  footer .fa-github {
+    font-size: 61px;
+    line-height: 52px;
+    margin: 20px;
+    color: #585c65; }
+  footer .fa-github:hover {
+    color: #4078c0; }
+  footer .fa-instagram {
+    font-size: 36px;
+    border: 2px solid #585c65;
+    border-radius: 100px;
+    color: #FFF;
+    background-color: #585c65;
+    padding: 6px 9px;
+    vertical-align: bottom;
+    margin: 20px; }
+  footer .fa-instagram:hover {
+    border: 2px solid #125688;
+    color: #FFF;
+    background-color: #125688; }
+  footer .fa-send {
+    font-size: 32px;
+    border: 2px solid #585c65;
+    border-radius: 100px;
+    color: #FFF;
+    background-color: #585c65;
+    padding: 8px 11px 8px 5px;
+    vertical-align: bottom;
+    margin: 20px; }
+  footer .fa-send:hover {
+    border: 2px solid #2272b9;
+    color: #FFF;
+    background-color: #2272b9; }
 
 .footer-bottom {
   background: #FFF;
@@ -5573,6 +5622,7 @@ footer {
   fill: white;
   stroke: white; }
 
+#footer-block,
 #map {
   height: 600px; }
 
@@ -5601,5 +5651,12 @@ footer {
 
 .vparallax-container {
   padding: 0 100px 0 100px; }
+
+.picture-row {
+  text-align: right;
+  margin-top: 30px; }
+  .picture-row img {
+    height: 80px;
+    width: auto; }
 
 /*# sourceMappingURL=style.css.map */
