--- a/styles.css
+++ b/styles.css
@@ -24,11 +24,8 @@
     font-size: 22px;
 }
 
-body{
-    background : url("./images/workspace.jpg");
-    background-repeat: repeat;
-    background-position: center 0px;
-    background-attachment: fixed;
+.flex-important{
+    display: flex !important;
 }
 
 /* Reset. */
