--- a/scss/style.scss
+++ b/scss/style.scss
@@ -45,20 +45,20 @@ html, body {
       background-color: rgba(0,0,0,.3);
     }
     &:first-child {
-      background-image: url(http://www.sra-architectes.com/wp-content/uploads/2011/09/Tour_cma_cgm_1_credits_Exmagina.jpg);
+      background-image: url(img/marseille.jpg);
       transform: translateY(-$parallax-offset / 2);
       .content-wrapper {
         transform: translateY($parallax-offset /2);
       }
     }
     &:nth-child(2) {
-      background-image: url(https://images.pexels.com/photos/450035/pexels-photo-450035.jpeg?cs=srgb&dl=business-computer-connection-450035.jpg&fm=jpg);
+      background-image: url(img/frontend.jpg);
     }
     &:nth-child(3) {
-      background-image: url(https://images.pexels.com/photos/716661/pexels-photo-716661.jpeg?cs=srgb&dl=black-and-white-blueprint-blur-716661.jpg&fm=jpg);
+      background-image: url(img/backend.jpg);
     }
     &:nth-child(4) {
-      background-image: url(https://www.cmsattler.de/wp-content/uploads/2016/12/Claus_Michael_Sattler_Bau_und_Konsolidierung_von_Rechenzentren_2-1.jpg);
+      background-image: url(img/devops.jpg);
       box-shadow: inset 0 0 0 1000px rgba(0,0,0,.2);
     }
   }
