--- a/css/style.css
+++ b/css/style.css
@@ -130,7 +130,7 @@ html .background.down-scroll + .background:not(.down-scroll) .content-wrapper, b
 html .nav-bar-icon, body .nav-bar-icon {
   position: absolute;
   right: 20px;
-  top: 220px;
+  top: calc( 30vh + 20px);
   line-height: 18px;
 }
 html .nav-bar-icon .menu-icon, body .nav-bar-icon .menu-icon {
