--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ html .background:before, body .background:before {
   background-color: rgba(0, 0, 0, 0.3);
 }
 html .background:first-child, body .background:first-child {
-  background-image: url(../img/marseille.jpg);
+  background-image: url(../img/toulouse.jpg);
   -webkit-transform: translateY(-15vh);
           transform: translateY(-15vh);
 }
@@ -57,6 +57,12 @@ html .background:nth-child(4), body .background:nth-child(4) {
   background-image: url(../img/devops.jpg);
   -webkit-box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2);
           box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2);
+}
+html .background:nth-child(5), body .background:nth-child(5) {
+  background-image: url(../img/cloud.jpg);
+}
+html .background:nth-child(6), body .background:nth-child(6) {
+  background-image: url(../img/web3.jpg);
 }
 html .background:nth-child(1), body .background:nth-child(1) {
   z-index: 3;
