--- a/css/style.css
+++ b/css/style.css
@@ -65,12 +65,18 @@ html .background:nth-child(6), body .background:nth-child(6) {
   background-image: url(../img/web3.jpg);
 }
 html .background:nth-child(1), body .background:nth-child(1) {
-  z-index: 3;
+  z-index: 5;
 }
 html .background:nth-child(2), body .background:nth-child(2) {
-  z-index: 2;
+  z-index: 4;
 }
 html .background:nth-child(3), body .background:nth-child(3) {
+  z-index: 3;
+}
+html .background:nth-child(4), body .background:nth-child(5) {
+  z-index: 2;
+}
+html .background:nth-child(5), body .background:nth-child(5) {
   z-index: 1;
 }
 html .content-wrapper, body .content-wrapper {
